[package]
name = "php-pdf"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Rosid <alahmadrosid@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
mupdf = "0.4.2"
phper = "0.12.0"
